--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,45 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+
+.glasslook {
+  background: rgba(0, 0, 0, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
 .App {
-  font-family: "Roboto", sans-serif;
-  min-width: 100vw;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-areas: "left right";
+  grid-template-rows: 3fr 1fr;
   max-height: 100vh;
-  background-image: url("./wallhaven-rd7drw.jpg");
-  background-repeat: no-repeat;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+}
+.App {
+  background: url("./wallhaven-rd7drw.jpg") no-repeat center;
   background-size: cover;
-  overflow: hidden;
   color: white;
+}
+
+.app-leftside {
+  grid-area: left;
+}
+.app-rightside {
+  grid-area: right;
+}
+
+.app-rightside {
   display: grid;
   grid-template-areas:
-    "picture search"
-    "picture searchresults"
-    "mainweather subweather"
-    "mainweather footer";
-  grid-template-columns: 3fr 1fr;
-  grid-template-rows: 0.5fr 1.5fr 1.8fr 0.2fr;
+    "search"
+    "searchresults"
+    "subweather"
+    "footer";
+  max-height: 100vh;
+  grid-template-rows: auto 1fr auto 0.2fr;
+  overflow: hidden;
 }
-.app-picture {
-  grid-area: picture;
-}
-.app-mainweather {
-  grid-area: mainweather;
-}
+
 .app-search {
   grid-area: search;
 }
@@ -35,4 +52,21 @@
 }
 .app-footer {
   grid-area: footer;
+}
+.app-leftside {
+  display: grid;
+  grid-template-areas:
+    "picture"
+    "mainweather"
+    ".";
+  grid-template-rows: 3fr 0.5fr 0.5fr;
+}
+.app-picture {
+  grid-area: picture;
+}
+.app-mainweather {
+  grid-area: mainweather;
+}
+* {
+  box-sizing: border-box;
 }
